# twitter-financial-news

./: EDA.ipynb  README.md  main.py  maincode.ipynb  pyproject.toml  training.ipynb
data/: new_data_test.csv  new_data_train.csv  test_cleaned.csv  train_cleaned.csv
models/: dl_models_metrics.pkl
